# isp-mlprac

./: Dockerfile  README.md  for-students.md  mlcourse.conf  mlcourse.service  pyproject.toml
mlcourse_prac/: check_process.py  config.py  db.py  evaluate.py  leaderboard.py  server.py  style.css  submit_process.py  telebot.py  venv.sh
